--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,23 @@
+<h1>Create a Team and Heroes!</h1>
+<form action='/teams' method='post'>
+ Team Name: <input type="text" name="team[name]">
+ Team Moto: <input type="text" name="team[motto]">
+<br>
+<h1>Hero 1</h1>
+  Hero Name: <input id="member1_name" type="text" name="team[heroes][][name]">
+  Hero Power: <input id="member1_power" type="text" name="team[heroes][][power]">
+  Hero Biography: <input id="member1_bio" type="text" name="team[heroes][][biography]">
+  <br><h1>Hero 2</h1>
+  Hero Name: <input id="member2_name" type="text" name="team[heroes][][name]">
+  Hero Power: <input id="member2_power" type="text" name="team[heroes][][power]">
+  Hero Biography: <input id="member2_bio" type="text" name="team[heroes][][biography]">
+  <h1>Hero 3</h1>
+  Hero Name: <input id="member3_name" type="text" name="team[heroes][][name]">
+  Hero Power: <input id="member3_power" type="text" name="team[heroes][][power]">
+  Hero Biography: <input id="member3_bio" type="text" name="team[heroes][][biography]">
+
+  <input type="submit" value="submit">
+</form>
+
+
 
